tests/machine/x/swift/join_multi.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:40:43Z
struct Customer: Equatable {
    var id: Int
    var name: String
}

struct Item: Equatable {
    var orderId: Int
    var sku: String
}

struct Order: Equatable {
    var customerId: Int
    var id: Int
}

struct Result: Equatable {
    var name: String
    var sku: String
}

var customers = [Customer(id: 1, name: "Alice"), Customer(id: 2, name: "Bob")]
var orders = [Order(customerId: 1, id: 100), Order(customerId: 2, id: 101)]
var items = [Item(orderId: 100, sku: "a"), Item(orderId: 101, sku: "b")]
var result = ({
	var _res: [(name: String, sku: String)] = []
	for o in orders {
		for c in customers {
			if !(o.customerId == c.id) { continue }
			for i in items {
				if !(o.id == i.orderId) { continue }
				_res.append(["name": c.name, "sku": i.sku])
			}
		}
	}
	return _res
}())
print("--- Multi Join ---")
for r in result {
    print(r.name, "bought item", r.sku)
}
